--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>The New Normal Sentinel - You're What's Important To Us</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/credo">Credo</a></li>
-        		<li><a href="/trending">Trending</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
+ ---
+layout: default
+title: The New Normal Sentinel
+---
+<div class="blurb">
         		<h1>Hi - we are building this.</h1>
-				<p>There isn't anything here yet. Be patient!</p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:newnormalsentinel@gmail.com">email</a></li>
-        		<li><a href="https://github.com/newnormalsentinel">github.com/newnormalsentinel</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+			<p>There isn't anything here yet. Be patient!</p>
+</div><!-- /.blurb -->
